# pkg/api/v1/rest/requests.go
@@ -7,25 +7,34 @@ import (
 )
 
 type CreateSystemRequest struct {
-	ID            v1.SystemID `json:"id"`
-	DefinitionURL string      `json:"definitionUrl"`
+	// System ID
+	ID v1.SystemID `json:"id"`
+	// URL for for where the system definition resides in.
+	DefinitionURL string `json:"definitionUrl" example:"git://github.com/foo/foo.git"`
 }
 
 type BuildRequest struct {
+	// Version of system to build
 	Version v1.SystemVersion `json:"version"`
 }
 
 type DeployRequest struct {
+	// Version of system to deploy
 	Version *v1.SystemVersion `json:"version,omitempty"`
-	BuildID *v1.BuildID       `json:"buildId,omitempty"`
+	// BuildID to deploy
+	BuildID *v1.BuildID `json:"buildId,omitempty"`
 }
 
 type RunJobRequest struct {
-	Path        tree.Path                         `json:"path"`
-	Command     []string                          `json:"command"`
+	// Path to run the job agsinst
+	Path tree.Path `json:"path"`
+	// Command to run
+	Command []string `json:"command"`
+	// Container environment
 	Environment definitionv1.ContainerEnvironment `json:"environment"`
 }
 
 type SetSecretRequest struct {
+	// Secret Value
 	Value string `json:"value"`
 }
